--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -20,3 +20,7 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+
+development:
+  foursquare_id: ENV['FOURSQUARE_ID']
+  foursquare_id: ENV['FOURSQUARE_SECRET']
